// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oclif cli builds from a mutation with string and enum type 1`] = `
"
const VoteDocument = \`
mutation Vote($name: String!, $type: VoteType!) {
  vote(repoFullName: $name, type: $type) {
    score
  }
}\`

export default class Vote extends Command {
  
  
  static flags = {
    help: flags.help({ char: 'h' }),
    name: flags.string({
      multiple: false,
      required: true,
    }),
    type: flags.string({
      multiple: false,
      required: true,
    })
  };

  async run() {
    const { flags } = this.parse(Vote);
    await handler({ command: this, query: VoteDocument, variables: flags });
  }
}
"
`;

exports[`oclif cli builds from a read query with integer parameters 1`] = `
"
const GetFeedDocument = \`
query GetFeed($type: FeedType!, $offset: Int!, $limit: Int!) {
  feed(type: $type, offset: $offset, limit: $limit) {
    id
    commentCount
  }
}\`

export default class GetFeed extends Command {
  
  
  static flags = {
    help: flags.help({ char: 'h' }),
    type: flags.string({
      multiple: false,
      required: true,
    }),
    offset: flags.integer({
      multiple: false,
      required: true,
    }),
    limit: flags.integer({
      multiple: false,
      required: true,
    })
  };

  async run() {
    const { flags } = this.parse(GetFeed);
    await handler({ command: this, query: GetFeedDocument, variables: flags });
  }
}
"
`;

exports[`oclif cli builds from a read query with single enum parameter 1`] = `
"
const GetFeedDocument = \`
query GetFeed($type: FeedType!) {
  feed(type: $type) {
    id
    commentCount
  }
}\`

export default class GetFeed extends Command {
  
  
  static flags = {
    help: flags.help({ char: 'h' }),
    type: flags.string({
      multiple: false,
      required: true,
    })
  };

  async run() {
    const { flags } = this.parse(GetFeed);
    await handler({ command: this, query: GetFeedDocument, variables: flags });
  }
}
"
`;

exports[`oclif cli builds from a read query with single string parameter 1`] = `
"
const GetEntryDocument = \`
query GetEntry($name: String!) {
  entry(repoFullName: $name) {
    repository {
      name
    }
  }
}\`

export default class GetEntry extends Command {
  
  
  static flags = {
    help: flags.help({ char: 'h' }),
    name: flags.string({
      multiple: false,
      required: true,
    })
  };

  async run() {
    const { flags } = this.parse(GetEntry);
    await handler({ command: this, query: GetEntryDocument, variables: flags });
  }
}
"
`;

exports[`oclif cli reads metadata from the @oclif directive 1`] = `
"
const GetCurrentUserDocument = \`
query GetCurrentUser {
  currentUser {
    login
  }
}\`

export default class GetCurrentUser extends Command {
  
static description = "Get Current User";

  
static examples: string[] = ["cli get-current-user","hello"];

  static flags = {
    help: flags.help({ char: 'h' }),
    
  };

  async run() {
    const { flags } = this.parse(GetCurrentUser);
    await handler({ command: this, query: GetCurrentUserDocument, variables: flags });
  }
}
"
`;
